# glory-shoelace

./: Cargo.toml  README.md
.github/workflows/: release.yml
examples/admin/: Cargo.toml  compose.yml  package.json  tailwind.config.js
examples/admin/src/: app.rs  main.rs
examples/admin/src/models/: mod.rs  notification.rs
examples/admin/src/widgets/: calendar.rs  dashboard.rs  gallery.rs  home.rs  mailbox.rs  mod.rs  profile.rs  root.rs  settings.rs  sidebar.rs  topper.rs
examples/admin/styles/: custom.css  satoshi.css  tailwind.css
examples/counter/: Cargo.toml  index.html
examples/counter/src/: main.rs
src/: lib.rs
src/widgets/: a.rs  alert.rs  b.rs  button.rs  c.rs  d.rs  f.rs  i.rs  impls.rs  input.rs  m.rs  mod.rs  o.rs  p.rs  q.rs  r.rs  s.rs  t.rs  v.rs
