[package]
name = "glory-shoelace"
version = "0.0.3"
authors = ["Chrislearn Young <chrislearn@hotmail.com>"]
edition = "2021"
rust-version = "1.73"
description = """
Shoelance for Glory.
"""
homepage = "https://glory.rs"
repository = "https://github.com/glory-rs/glory-shoelace"
documentation = "https://docs.rs/glory-shoelace/"
readme = "./README.md"
keywords = ["dom", "ui", "gui", "react", "wasm"]
license = "MIT OR Apache-2.0"
categories = ["web-programming"]

[features]
default = []
web-csr = ["__single_holder", "dep:wasm-bindgen", "glory-core/web-csr"]
web-ssr = ["glory-core/web-ssr"]
__single_holder = ["glory-core/__single_holder"]

[dependencies]
web-sys = { version = "0.3", features = ["Element", "HtmlElement"] }
wasm-bindgen = { version = "0.2.88", optional = true }
glory-core = { version = "0.2.0", path = "../glory/crates/core", default-features = false }

[package.metadata.cargo-all-features]
denylist = ["stable"]
skip_feature_sets = [["web-ssr", "web-csr"]]
